// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Combobox component renders 1`] = `
@media  {
  .c-eZIHuC {
    box-shadow: none;
    -webkit-appearance: none;
    appearance: none;
    background-image: url(data:image/svg+xml;charset=US-ASCII,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%2224px%22%20height%3D%2224px%22%20viewBox%3D%220%200%2024%2024%22%20stroke%3D%22%23757575%22%20stroke-width%3D%222%22%20stroke-linecap%3D%22round%22%20stroke-linejoin%3D%22round%22%20fill%3D%22none%22%20color%3D%22%23757575%22%3E%3Cpolyline%20points%3D%226%2010%2012%2016%2018%2010%22%2F%3E%3C%2Fsvg%3E);
    background-position: right var(--space-3) top 50%, 0 0;
    background-repeat: no-repeat, repeat;
    background-size: 20px auto, 100%;
    border: 1px solid var(--colors-grey700);
    border-radius: var(--radii-0);
    box-sizing: border-box;
    color: var(--colors-grey1000);
    cursor: text;
    display: block;
    font-family: var(--fonts-body);
    height: var(--sizes-4);
    padding-left: var(--space-3);
    padding-right: var(--space-6);
    transition: all 100ms ease-out;
    width: 100%;
  }

  .c-eZIHuC::placeholder {
    color: var(--colors-grey700);
    opacity: 1;
  }

  .c-eZIHuC:focus-within {
    border-color: var(--colors-primary800);
    outline: none;
  }

  .c-eZIHuC[disabled] {
    background-color: var(--colors-grey200);
    color: var(--colors-grey800);
    cursor: not-allowed;
  }

  .c-gZqUiC {
    background: white;
    border: solid 1px var(--colors-grey200);
    border-radius: var(--radii-0);
    box-shadow: var(--shadows-1);
    box-sizing: border-box;
    font-family: var(--fonts-body);
    font-size: var(--fontSizes-md);
    outline: none;
    padding: var(--space-1);
    transform: translateY(var(--space-2));
  }

  .c-jipDmG {
    color: var(--colors-grey900);
    cursor: pointer;
    margin: 0;
    padding: var(--space-2);
  }

  .c-jipDmG:hover,
  .c-jipDmG[aria-selected="true"] {
    background: var(--colors-grey100);
    border-radius: var(--radii-0);
  }

  .c-jipDmG [data-user-value] {
    color: var(--colors-primary800);
  }

  .c-cOrACU {
    list-style: none;
    margin: 0;
    padding: 0;
    -webkit-user-select: none;
    user-select: none;
  }
}

@media  {
  .c-eZIHuC-fwoCmE-size-md {
    height: var(--sizes-4);
    font-size: var(--fontSizes-md);
    line-height: 2;
  }
}

<div>
  <div
    class="c-PJLV"
    data-reach-combobox=""
    data-state="idle"
  >
    <input
      aria-autocomplete="both"
      aria-controls="listbox--1"
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-label="Favourite fruit"
      class="c-eZIHuC c-eZIHuC-fwoCmE-size-md"
      data-reach-combobox-input=""
      data-state="idle"
      id="fruit"
      role="combobox"
      value=""
    />
  </div>
</div>
`;

exports[`Combobox component renders with lg size 1`] = `
@media  {
  .c-eZIHuC {
    box-shadow: none;
    -webkit-appearance: none;
    appearance: none;
    background-image: url(data:image/svg+xml;charset=US-ASCII,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%2224px%22%20height%3D%2224px%22%20viewBox%3D%220%200%2024%2024%22%20stroke%3D%22%23757575%22%20stroke-width%3D%222%22%20stroke-linecap%3D%22round%22%20stroke-linejoin%3D%22round%22%20fill%3D%22none%22%20color%3D%22%23757575%22%3E%3Cpolyline%20points%3D%226%2010%2012%2016%2018%2010%22%2F%3E%3C%2Fsvg%3E);
    background-position: right var(--space-3) top 50%, 0 0;
    background-repeat: no-repeat, repeat;
    background-size: 20px auto, 100%;
    border: 1px solid var(--colors-grey700);
    border-radius: var(--radii-0);
    box-sizing: border-box;
    color: var(--colors-grey1000);
    cursor: text;
    display: block;
    font-family: var(--fonts-body);
    height: var(--sizes-4);
    padding-left: var(--space-3);
    padding-right: var(--space-6);
    transition: all 100ms ease-out;
    width: 100%;
  }

  .c-eZIHuC::placeholder {
    color: var(--colors-grey700);
    opacity: 1;
  }

  .c-eZIHuC:focus-within {
    border-color: var(--colors-primary800);
    outline: none;
  }

  .c-eZIHuC[disabled] {
    background-color: var(--colors-grey200);
    color: var(--colors-grey800);
    cursor: not-allowed;
  }

  .c-gZqUiC {
    background: white;
    border: solid 1px var(--colors-grey200);
    border-radius: var(--radii-0);
    box-shadow: var(--shadows-1);
    box-sizing: border-box;
    font-family: var(--fonts-body);
    font-size: var(--fontSizes-md);
    outline: none;
    padding: var(--space-1);
    transform: translateY(var(--space-2));
  }

  .c-jipDmG {
    color: var(--colors-grey900);
    cursor: pointer;
    margin: 0;
    padding: var(--space-2);
  }

  .c-jipDmG:hover,
  .c-jipDmG[aria-selected="true"] {
    background: var(--colors-grey100);
    border-radius: var(--radii-0);
  }

  .c-jipDmG [data-user-value] {
    color: var(--colors-primary800);
  }

  .c-cOrACU {
    list-style: none;
    margin: 0;
    padding: 0;
    -webkit-user-select: none;
    user-select: none;
  }
}

@media  {
  .c-eZIHuC-fwoCmE-size-md {
    height: var(--sizes-4);
    font-size: var(--fontSizes-md);
    line-height: 2;
  }

  .c-eZIHuC-jAZHIx-size-lg {
    height: var(--sizes-5);
    font-size: var(--fontSizes-md);
    line-height: 2;
  }
}

<div>
  <div
    class="c-PJLV"
    data-reach-combobox=""
    data-state="idle"
  >
    <input
      aria-autocomplete="both"
      aria-controls="listbox--13"
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-label="Favourite fruit"
      class="c-eZIHuC c-eZIHuC-jAZHIx-size-lg"
      data-reach-combobox-input=""
      data-state="idle"
      id="fruit"
      role="combobox"
      value=""
    />
  </div>
</div>
`;
